After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742764 - [PATCH] Fix check for 'y' padding in gtk_cell_renderer_set_padding()
[PATCH] Fix check for 'y' padding in gtk_cell_renderer_set_padding()
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-11 16:51 UTC by maksqwe
Modified: 2015-01-11 20:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (789 bytes, patch)
2015-01-11 16:51 UTC, maksqwe
committed Details | Review

Description maksqwe 2015-01-11 16:51:10 UTC
Created attachment 294284 [details] [review]
Patch

gtkcellrenderer.c 1096

g_return_if_fail (xpad >= 0 && xpad >= 0);