Fix check for 'y' padding in gtk_cell_renderer_set_padding()

Signed-off-by: Maks Naumov <maksqwe1@ukr.net>

https://bugzilla.gnome.org/show_bug.cgi?id=742764